--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="https://avatars.githubusercontent.com/u/92794800?v=4" alt="Mi Foto">
         </div>
         <div class="card-text">
-            <p>Con más de una década de experiencia en el campo de la informática desde 2010,</p>
+            <p>Con experiencia en el campo de la informática desde 2010,</p>
             <p> he desempeñado roles clave en equipos de infraestructura cursando CCNA, administración de sistemas y seguridad informática, soporte y control de calidad (Q&A). </p>
             <p> Mi enfoque actual se centra en tecnologías de programación y desarrollo. A lo largo de mi carrera, he demostrado una sólida capacidad para trabajar en equipo, <br>aprovechando mi experiencia diversa para contribuir eficazmente en entornos colaborativos.</p>
         </div>
